[package]
name = "frp_3d"
version = "0.0.1"
authors = ["Eduard Bopp <eduard.bopp@aepsil0n.de>"]
description = "A 3D FRP test project"
homepage = "https://github.com/moredread/frp_3d"
repository = "https://github.com/moredread/frp_3d"
readme = "README.md"
keywords = ["frp", "reactive", "event", "window"]
license = "GPL-3.0+"


[dependencies]
image = "*"
clock_ticks = "*"
nalgebra = "*"
num = "*"
gfx = "*"
gfx_device_gl = "*"
glutin = "*"
cgmath = "*"
carboxyl = "0.1"
time = "*"

[dependencies.pistoncore-input]
git = "https://github.com/PistonDevelopers/input"


[dependencies.gfx_func]
git = "https://github.com/aepsil0n/gfx-func"

[dependencies.carboxyl_time]
git = "https://github.com/aepsil0n/carboxyl_time"

[dependencies.carboxyl_window]
git = "https://github.com/aepsil0n/carboxyl_window"

[dependencies.pistoncore-window]
git = "https://github.com/PistonDevelopers/window"

[dependencies.shader_version]
git = "https://github.com/PistonDevelopers/shader_version"

[dependencies.pistoncore-glutin_window]
git = "https://github.com/PistonDevelopers/glutin_window"
