[package]
name = "frp_3d"
version = "0.0.1"
authors = ["Eduard Bopp <eduard.bopp@aepsil0n.de>"]
description = "A 3D FRP test project"
homepage = "https://github.com/moredread/frp_3d"
repository = "https://github.com/moredread/frp_3d"
readme = "README.md"
keywords = ["frp", "reactive", "event", "window"]
license = "GPL-3.0+"


[dependencies]
image = "0.3"
nalgebra = "0.2"
num = "0.1"
glutin = "0.1"
shader_version = "0.1"
pistoncore-window = "0.1"
carboxyl = "0.1"
time = "0.1"
gfx = "0.6"
gfx_device_gl = "0.4"
pistoncore-input = "0.1"
pistoncore-glutin_window = "0.1"
rustc-serialize = "0.3"

[dependencies.gfx_func]
git = "https://github.com/aepsil0n/gfx-func"

[dependencies.carboxyl_time]
git = "https://github.com/aepsil0n/carboxyl_time"

[dependencies.carboxyl_window]
git = "https://github.com/aepsil0n/carboxyl_window"
